# ai-mutil-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MATE_EVOLUTION_QUICKSTART.md  Makefile  README.md  brain.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
config/: game-lessons.md
docs/: IMPLEMENTATION_PLAN.md
prompt/mate/: EVOLUTION.md  base.md  memory.md  soul.md
scripts/: _plan_body.md  _update_plan.py  check_pro_mode.py  mate_evolution_demo.py
src/: db.py  lessons.py  main.py  orchestrator.py  orchestrator_game.py  state.py  state_game.py
src/agents/: analyzer.py  base.py  coder.py  dev.py  notifier.py  planner.py  qa.py  reviewer.py  tech_expert.py  tester.py
src/context/: game_loader.py
src/llm/: __init__.py
src/tools/: browser.py  file_tools.py  filesystem.py  game_tools.py  git.py  js_ast_patch.py  notify.py  search.py
src/web/: server.py
src/web/static/: index.html
tests/: test_orchestrator.py
ui/: .env.local.example  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: ActivityFeed.tsx  AgentCard.tsx  AnalyticsPanel.tsx  ChatHistoryPanel.tsx  GamePreviewPanel.tsx  MarkdownContent.tsx  MateChat.tsx  PWARegister.tsx  PipelineStages.tsx  ResultBar.tsx  SessionsPanel.tsx  TaskForm.tsx  TaskQueuePanel.tsx  TechChat.tsx
ui/hooks/: useChatSession.ts
ui/lib/: api.ts
ui/public/: manifest.webmanifest  sw.js
ui/types/: index.ts
(+3 files in other folders)
